--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,22 @@
     <groupId>com.github.ireliaonia</groupId>
     <artifactId>Cred</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>2.0</version>
+                <configuration>
+                    <mainClass>com.github.ireliaonia.cred.Main</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     
 </project>
